# orailix_backend-main

./: .gitignore  Cargo.toml  README.md  run_orailix_backend (3).bat
orailix.com/: 404.html  index.html  old_index.html  robots.txt  sitemap.xml
orailix.com/assets/css/: main.css  main.css.map  new_styles1.css
orailix.com/assets/js/: load_articles.js  matomo.js  webflow.schunk.js  webfont.js
orailix.com/assets/jupyter/: blog.ipynb.html
orailix.com/members/: index.html  index_old.html
orailix.com/members/ArnaudGrivetSebert/: index.html
orailix.com/members/ClementElliker/: index.html
orailix.com/members/JeremieDentan/: index.html
orailix.com/members/JesseRead/: index.html
orailix.com/members/LucasThil/: index.html
orailix.com/members/MathisLeBail/: index.html
orailix.com/members/MohamedDhouib/: index.html
orailix.com/members/SoniaVanier/: index.html
orailix.com/members/ValentinDenee/: index.html
orailix.com/metaverse/: index.html
orailix.com/news/: index.html  index_old.html  publications.html  seminars.html  talks.html  tech.html
orailix.com/news/internships_2024_CA/: index.html
orailix.com/pages/: open_positions.html  sonia_vanier.html
orailix.com/pages/fr/: open_positions.html
orailix.com/seminars/: index.html
orailix.com/seminars/2024-09-04-murilo-heyden/: index.html
orailix.com/seminars/2024-10-09-elie-bursztein/: index.html
orailix.com/seminars/2024-12-04-konstantin-bottinger/: index.html
orailix.com/seminars/2024-12-05-alex-combessie/: index.html
src/: articles.rs  main.rs  session_management.rs
(+66 files in other folders)
